@@ -1,3 +1,8 @@
+2001-01-02  John Harper  <jsh@eazel.com>
+
+	* images.c (Fcomposite_images): fixed bugs in both gdk-pixbuf
+	and Imlib versions
+
 2000-12-30  John Harper  <jsh@eazel.com>
 
 	* gtk-style.c (states): reordered this array so that it matches
